GNOME Bugzilla – Bug 656572
Call window asserts when you try to move the preview
Last modified: 2011-08-16 10:17:33 UTC
Czech it out. Clutter-CRITICAL **: clutter_rectangle_set_border_width: assertion `CLUTTER_IS_RECTANGLE (rectangle)' failed aborting... Program received signal SIGABRT, Aborted. 0x00007fffed0e9415 in raise (sig=<value optimized out>) at ../nptl/sysdeps/unix/sysv/linux/raise.c:64 64 ../nptl/sysdeps/unix/sysv/linux/raise.c: No such file or directory. in ../nptl/sysdeps/unix/sysv/linux/raise.c (gdb) bt
+ Trace 228097
This is just the first one, if you switch off G_DEBUG=fatal_warnings there are more and even a CLUTTER_IS_ACTOR assertion inside clutter_actor_show.
Created attachment 193903 [details] [review] Get the preview position from preview_pos Getting it from the coordinates might fail if the system is too slow and gives us bad coordinates.
Review of attachment 193903 [details] [review]: ++
This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.