Get the preview position from preview_pos

Getting it from the coordinates might fail if the system
is too slow and gives us bad coordinates.

https://bugzilla.gnome.org/show_bug.cgi?id=656572